--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
 <!-- -->
 <div id='links'>
   <a id='twitter' href="https://x.com/thedoxeos?t=FIlKYAt0X88bAVQk_gZx9g&s=09" target="_blank"><span class='fa fa-twitter'></span></a>
-  <div id='pens'><a href="#" target="_blank"><i class="fa fa-solid fa-triangle-exclamation"></i></a>**Cosas Randoms**</div>
+  <div id='pens'><a href="#" target="_blank"><i class="fa fa-solid fa-triangle-exclamation"></i></a>**  </div>
+</div>
+<!-- partial -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+<script src="script.js"></script>
+</body>
+</html>Cosas Randoms**</div>
 </div>
 <!-- partial -->
 <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
